clusters/eks-use1/apps/ai/open-webui/egress.yaml
apiVersion: v1
kind: Service
metadata:
  name: usw2-ai-kserve-qwen-llm-predictor
  annotations:
    tailscale.com/tailnet-fqdn: usw2-ai-kserve-qwen-llm-predictor.raj.ts.net
    tailscale.com/proxy-group: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: http
    port: 80
    protocol: TCP
