clusters/eks-use1/apps/ai/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  annotations:
    tailscale.com/funnel: "true"
    tailscale.com/proxy-group: common-ingress
spec:
  defaultBackend:
    service:
      name: open-webui
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - chat
